# ai-commanders

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  spec.md
data/: drives.json  drives.md  fleet_config_claude_vs_gemini.json  fleet_config_claude_vs_grok.json  fleet_config_debug_2v2.json  fleet_config_example.json  fleet_config_mcp_example.json  fleet_config_mcp_vs_gemini.json  fleet_config_mcp_vs_mcp.json  fleet_config_test_2cp.json  fleet_ships.json  modules.json  modules.md  reactors.json  reactors.md  weapons.json  weapons.md
docs/: ships.md
scripts/: armor_calculator.py  attitude_control.py  calculate_shots_to_kill.py  extract_drives.py  extract_modules.py  extract_reactors.py  extract_weapons.py  mcp_battle.py  run_llm_battle.py  ship_calculator.py  ship_calculator_v2.py  test_admiral_prompt.py  test_enemy_names.py  test_prompts_comparison.py
src/: __init__.py  battle_report.py  captain.py  combat.py  combat_scripts.py  command.py  damage.py  firecontrol.py  geometry.py  maneuvers.py  modules.py  physics.py  pointdefense.py  power.py  projectile.py  scenarios.py  simulation.py  targeting.py  thermal.py  torpedo.py
tests/: __init__.py  test_battle_recorder.py  test_battle_report.py  test_combat.py  test_combat_simulation.py  test_command.py  test_damage.py  test_dreadnought_siege.py  test_engagement.py  test_firecontrol.py  test_geometry.py  test_heavy_siege_coiler.py  test_llm_integration.py  test_mcp.py  test_physics.py  test_point_defense.py  test_pointdefense.py  test_power.py  test_projectile.py  (+5 more)
(+62 files in other folders)
