[project]
name = "ai-commanders"
version = "0.1.0"
description = "Terra Invicta-inspired space battle simulator with LLM-controlled captains"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
mcp = [
    "mcp>=1.2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
